# dlstreamer

./: .gitignore  .pylintrc  .yamllint  CMakeLists.txt  CONTRIBUTING.md  DEBUG_NPU_LABELS_REPORT.md  DEBUG_NPU_LABELS_REPORT_EN.md  EDITING_OPENVINO_MODELS.md  LICENSE  Makefile  NPU_LABELS_FIX_REPORT.md  READING_INTERMEDIATE_TENSORS.md  README.md  RELEASE_NOTES.md  add_result.py  cmds.txt  debug_npu_final.py  debug_npu_fix.py  debug_npu_fix10.py  debug_npu_fix2.py  debug_npu_fix3.py  debug_npu_fix4.py  debug_npu_fix5.py  debug_npu_fix6.py  debug_npu_fix7.py  debug_npu_fix8.py  debug_npu_fix9.py  debug_npu_labels2.py  debug_npu_scores.py  debug_npu_scores2.py  pylintrc  requirements.txt  test.py  third-party-programs.txt  vcpkg.json
dependencies/windows/: .gitignore  CMakeLists.txt  GstAnalytics-1.0.gir  GstAnalytics.py.patch  build_gstanalytics_zip.ps1  install_gstanalytics_patch.ps1
python/: CMakeLists.txt  pyproject.toml
python/dlstreamer/: __init__.py
python/dlstreamer/onvif/: ONVIF_SUITE_GUIDE_FOR_DLSTREAMER_DEVELOPER.md  __init__.py  _provider.py  _state.py  api.py  config.json  dls_onvif_config_manager.py  dls_onvif_discovery_engine.py  dls_onvif_discovery_thread.py  dls_onvif_events.py
python/dlstreamer/onvif-plugin/: README.md
python/dlstreamer/onvif-plugin/c/: onvifdeviceprovider_shim.c
python/dlstreamer/onvif-plugin/python/: dls_onvif_src.py  onvifdeviceprovider.py
python/dlstreamer/onvif/camera_profiles/: README.md  __init__.py  api.py  media_profiles.py  reader.py  types.py
python/dlstreamer/onvif/discovery/: README.md  __init__.py  api.py  ws_discovery.py
python/dlstreamer/onvif/do-not-commit/: README_INTEGRATED.md  demo_ui.py  demo_ui_integrated.py
python/dlstreamer/onvif/event_manager/: README.md  __init__.py  api.py  capabilities.py  engine.py  types.py
python/dlstreamer/onvif/ptz/: README.md  __init__.py  api.py  capabilities.py  controller.py  types.py
python/dlstreamer/onvif/samples/camera_profiles_sample/: __init__.py  __main__.py  app.py
python/dlstreamer/onvif/samples/discovery_sample/: __init__.py  __main__.py  app.py
python/dlstreamer/onvif/samples/event_manager_sample/: __init__.py  __main__.py  app.py
python/dlstreamer/onvif/samples/ptz_sample/: __init__.py  __main__.py  app.py
python/dlstreamer/onvif/samples/video_engine_sample/: __init__.py  __main__.py  app.py  video_engine_event_mapping.json  video_engine_pipelines.json  video_engine_static_mapping.json
python/dlstreamer/onvif/video_engine/: README.md  __init__.py  api.py  dynamic.py  engine.py  types.py
python/gstgva/: __init__.py  meta_registry.py  region_of_interest.py  tensor.py  util.py  video_frame.py
python/gstgva/audio/: audio_event.py  audio_frame.py
samples/auto_generated_samples/deepstream_cpp_conversion/: CMakeLists.txt  README.md  build_and_run.sh  deepstream_lpr_app.cpp  export_models.py  export_requirements.txt
samples/gstreamer/cpp/draw_face_attributes/: CMakeLists.txt  README.md  build_and_run.sh  main.cpp
src/monolithic/gst/3d_elements/: CMakeLists.txt
src/monolithic/gst/3d_elements/g3dinference/: CMakeLists.txt  g3dinference.cpp  g3dinference.h
src/monolithic/gst/3d_elements/g3dlidarparse/: CMakeLists.txt  g3dlidarparse.cpp  g3dlidarparse.h
src/monolithic/gst/3d_elements/g3dlidarsrc/: CMakeLists.txt  g3dlidarsrc.cpp  g3dlidarsrc.h  lidar_config.hpp
src/monolithic/gst/3d_elements/g3dlidarsrc/backends/: CMakeLists.txt
src/monolithic/gst/3d_elements/g3dlidarsrc/configs/: robosense_e1r_udp.json
src/monolithic/gst/3d_elements/g3dobjectfuser/: CMakeLists.txt  calibration.cpp  calibration.h  g3dobjectfuser.cpp  g3dobjectfuser.h  object_fuser_impl.cpp  object_fuser_impl.h
src/monolithic/gst/3d_elements/g3dradarprocess/: CMakeLists.txt  gstradarprocess.cpp  gstradarprocess.h  gstradarprocessmeta.c  gstradarprocessmeta.h
src/monolithic/gst/3d_elements/g3drender/: CMakeLists.txt  g3drender.cpp  g3drender.h
src/monolithic/gst/3d_elements/gstlidarvalidate/: CMakeLists.txt  g3dlidarvalidate.cpp  g3dlidarvalidate.h
src/monolithic/gst/3d_registrator/: CMakeLists.txt  register_3d_elements.cpp
src/monolithic/gst/elements/3d_elements/g3dlidarparse/: CMakeLists.txt  g3dlidarparse.cpp
src/monolithic/gst/elements/3d_elements/gstlidarvalidate/: CMakeLists.txt  g3dlidarvalidate.cpp
src/monolithic/gst/elements/3d_registrator/: CMakeLists.txt  register_3d_element.cpp
src/monolithic/gst/elements/fusion/: CMakeLists.txt  fusion.cpp
src/monolithic/gst/elements/gstlidarparse/: CMakeLists.txt  gstlidarmeta.cpp  gstlidarmeta.h  gstlidarparse.cpp  gstlidarparse.h
src/monolithic/gst/elements/gstlidarvalidate/: CMakeLists.txt  gstlidarmeta.cpp  gstlidarmeta.h  gstlidarvalidate.cpp  gstlidarvalidate.h
src/monolithic/gst/elements/gstradarprocess/: CMakeLists.txt  DESIGN.md  gstradarprocess.cpp  gstradarprocess.h  radar_config.hpp
src/monolithic/gst/elements/gstradarprocessor/: CMakeLists.txt  DESIGN.md  gstradarprocessor.cpp  gstradarprocessor.h  gstradarprocessormeta.c  gstradarprocessormeta.h  libradar.h  radar_config.hpp
src/monolithic/gst/elements/gvagenai/: CMakeLists.txt  configs.cpp  configs.hpp  genai.cpp  genai.hpp  gstgvagenai.cpp  gstgvagenai.h
src/monolithic/gst/elements/gvastreammux/: CMakeLists.txt  gstgvastreammux.cpp  gstgvastreammux.h  gstgvastreammuxmeta.cpp
src/monolithic/inference_backend/image_inference/async_with_d3d11/: CMakeLists.txt  d3d11_converter.cpp  d3d11_converter.h  image_inference_async_d3d11.cpp  image_inference_async_d3d11.h
tests/unit_tests/check/components/: CMakeLists.txt
tests/unit_tests/check/components/audio/: audio_event_test.cpp
tests/unit_tests/check/components/gstvideoanalyticsmeta/: CMakeLists.txt  keypoint_descriptor_test.cpp  tensor_convert_test.cpp  video_frame_test.cpp
tests/unit_tests/check/components/metaaggregate_copy/: CMakeLists.txt  metaaggregate_copy_test.cpp
tests/unit_tests/check/components/postprocessing/: zeroshot_openclip_test.cpp
tests/unit_tests/check/elements/analytics/: CMakeLists.txt
tests/unit_tests/check/elements/metaconvert/: CMakeLists.txt
(+828 files in other folders)
