# ==============================================================================
# Copyright (C) 2026 Intel Corporation
#
# SPDX-License-Identifier: MIT
# ==============================================================================

add_subdirectory(g3dradarprocess)
add_subdirectory(g3dlidarparse)
add_subdirectory(g3dinference)
add_subdirectory(g3dobjectfuser)
add_subdirectory(g3drender)
