# ==============================================================================
# Copyright (C) 2018-2026 Intel Corporation
#
# SPDX-License-Identifier: MIT
# ==============================================================================

add_subdirectory(test_metaconvert)
add_subdirectory(test_metaconvert_keypoints)
add_subdirectory(test_properties)
